Updated style, added IDs

--- a/index.html
+++ b/index.html
@@ -158,6 +158,25 @@
         <header>Steel Pushing and Iron Pulling</header>
         <article>
           
+          <code>
+            function push {
+     if (user.isCoinshot && weight>.target) {
+         return target.pushed();
+     }   else {
+         push .coinshot
+     }
+}
+          </code>
+          <code>
+            function pull {
+     if (user.isLurcher && weight>.target) {
+         return target.pulled();
+     }   else {
+         pull .lurcher
+     }
+}
+          </code>
+
           <p>
             Steel Pushing and iron Pulling are incredibly versatile talents, both for coinshots and lurchers and Mistborn. How it works is quite simple - when an Allomancer burns either steel or iron, they see faint blue lines connecting them to nearby sources of metal. If they focus on those lines, they can Push or Pull on that metal, moving it closer to them or away from their center of gravity. If the metal is heavier than them, or obstructed in some way, they will be moves towards or away from it instead. More than one Allomancer can Push or Pull the same object at the same time. They can only push with their own weight, so if, for example, two Allomancers were to both Push on a coin with their full weight, the heavier one would stay in place and the lighter one would be Pushed back.
           </p>
